<resources>
    <string name="app_name">Snaption</string>
    <string name="action_settings">Settings</string>
    <string name="select_image">Select an Image</string>
    <string name="create_game">Create Game</string>
    <string name="facebook_app_id">1810118319274207</string>
    <string name="fb_login_protocol_scheme">fb1810118319274207</string>
    <string name="login_dialog_header">Log in with Google or Facebook</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="snaption_wall">Snaption Wall</string>
    <string name="feedback_text">Give Feedback</string>string>
    <string name="profile">Profile</string>
    <string name="game_public">Public</string>
    <string name="game_private">Private</string>
    <string name="public_or_private">Do you want the game public or private?</string>
    <string name="maturity_rating">Who is this content appropriate for?</string>
    <string name="game_adult">Mature</string>
    <string name="game_everyone">Everyone</string>
    <string name="category">Tags (Separate by commas)</string>
    <string name="date_button_set">Set Date</string>
    <string name="set_end_date">Select the game end date.</string>
    <string name="games_created">Games Created:</string>
    <string name="games_text">Games</string>
    <string name="captions_text">Captions</string>
    <string name="captions_created">Captions Created:</string>
    <string name="end_date">\'Ended on: \'MM/dd/yy</string>
    <string name="privacy">Privacy</string>
    <string name="content_rating">Content rating</string>
    <string name="new_game">Create new game</string>
    <string name="caption_filler">Be the first to caption this photo!</string>
    <string name="closed_caption_filler">This photo did not receive any captions</string>
    <string name="friends">Friends</string>
    <string name="add_friends_label">Add Friends</string>
    <string name="captions">Captions</string>
    <string name="submit_caption">Submit</string>
    <string name="refresh">Refresh all cards</string>
    <string name="fb_friends">Facebook friends on Snaption</string>
    <string name="google_friends">Google+ friends on Snaption</string>
    <string name="add">Add</string>
    <string name="added_friend">%s is now your friend!</string>
    <string name="problem_adding_friend">Problem adding %s as your friend.</string>
    <string name="already_friend">%s is already your friend.</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="logout_prompt">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_success">Successfully logged in</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="login_failure">Failed to log in</string>
    <string name="logout_failure">Failed to log out</string>
    <string name="empty_friends">You don\'t have any friends yet!\n\nClick on the button below to find someone you know.</string>
    <string name="send_invites">Invite more friends!</string>
    <string name="fb_invite">Facebook Invite</string>
    <string name="fb_invite_details">Invite friends to play Snaption through Facebook</string>
    <string name="share_link">Share a Link</string>
    <string name="share_link_details">Invite friends to play Snaption by sharing a link</string>
    <string name="empty_fb_friends">There are no Facebook friends to add</string>
    <string name="join_snaption_subject">Join me in Snaption!</string>
    <string name="join_game_email_body">%1$s\nHave a better caption? Submit it here: %2$s</string>
    <string name="join_snaption_email_body">You should join me on Snaption! Click here: %1$s</string>
    <string name="no_internet">There was an error, you may not be connected to the Internet</string>
    <string name="game_invite">Invite</string>
    <string name="join_game">Join Game</string>
    <string name="empty_caption">You cannot submit an empty caption</string>
    <string name="upvote_error">There was an error in registering your vote</string>
    <string name="captioner_name">- %s</string>
    <string name="search_text">Search for Snaption users</string>
    <string name="title_activity_search">Search</string>
    <string name="no_search">We can\'t find anyone with that name, try searching again.</string>
    <string name="picture_change">Your profile picture has changed, but changes may not be immediately reflected</string>
    <string name="game_invite_notification_text">%s has invited you to a game!</string>
    <string name="game_invite_notification_title">Snaption Game Invitation</string>
    <string name="private_game_error">There was an error getting your private games</string>
    <string name="add_friends">+ add friends</string>
    <string name="no_friends_add_invite">You don\'t have any friends to add or invite.</string>
    <string name="null_user">[deleted]</string>
    <string name="my_feed">My Feed</string>
    <string name="discover">Discover</string>
    <string name="popular">Popular</string>
    <string name="total_caption_upvote_text">Caption Upvotes:</string>
    <string name="friends_with_colon">Friends:</string>
    <string name="make_own_caption_prompt">Make your own caption!</string>
    <string name="converting">Converting...</string>
    <string name="hours">hour</string>
    <string name="minutes">minute</string>
    <string name="days">day</string>
    <string name="remain">remaining</string>
    <string name="plural">s</string>
    <string name="game_ended_notification">A game created by %s has ended</string>
    <string name="friends_in_game">All your friends are already in this game!</string>
    <string name="end_date_passed_upvote">This game has ended, you cannot upvote captions.</string>
    <string name="end_date_passed_caption">This game has ended, you cannot create a caption.</string>
    <string name="change_photo_error">Error occurred while changing photo</string>
    <string name="change_username_error">Error occurred while changing username</string>
    <string name="inv_to_snaption">Invite to snaption</string>
    <string name="overflow_text">+%d</string>
    <string name="close">Close</string>
    <string name="wof">Wall of Fame</string>
    <string name="players">Players</string>
    <string name="leave_game">Leave</string>
    <string name="leave_game_error">Error occurred while attempting to leave game</string>
    <string name="leave_game_success">You are no longer a player in the game</string>
    <string name="total_game_upvote_text">Game Upvotes:</string>
    <string name="got_it">Got it!</string>
    <string name="do_not_show_agian">Don\'t show again</string>
    <string name="create_game_from_existing_info">These games are closed. Long press to start a new game with the same image</string>
    <string name="friends_info">Add and invite your friends so you can add them to games you create!</string>
    <string name="copied_link_to_clipboard">Link copied to your clipboard</string>
    <string name="google_login">Log in with Google</string>
    <string name="facebook_login">Log in with Facebook</string>

    <!--Accessibility strings-->
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="user_profile_photo">User profile photo</string>
    <string name="title_activity_caption">CaptionActivity</string>
    <string name="choose_image_from">Choose Image from...</string>
    <string name="uploading_photo">Uploading photo</string>
    <string name="pick_an_image">You must pick an image.</string>
    <string name="choose_public_or_private">You must choose whether the game is public or private.</string>
    <string name="pick_future_date">You must select a day in the future.</string>
    <string name="illegal_tag_text">Tags cannot contain the characters \".\", \"$\", \"#\", \"/\", \"[\", or \"]\".</string>
    <string name="image_min_height">Image must be at least %d pixels tall</string>
    <string name="image_min_width">Image must be at least %d pixels wide</string>
</resources>
