<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/main_group">
        <item
            android:id="@+id/feedback_item"
            android:icon="@drawable/ic_snaption"
            android:title="@string/feedback_text" />
        <item
            android:id="@+id/wall_item"
            android:icon="@drawable/ic_dashboard_grey_400_18dp"
            android:title="@string/snaption_wall" />
        <item
            android:id="@+id/profile_item"
            android:icon="@drawable/ic_account_circle_grey_400_18dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/friends_item"
            android:icon="@drawable/ic_supervisor_account_grey_400_18dp"
            android:title="@string/friends" />
    </group>
    <group android:id="@+id/login_logout_group">
        <item
            android:id="@+id/log_option"
            android:icon="@drawable/login"
            android:title="@string/login" />
    </group>
</menu>