<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_create_game"
    tools:context="com.snaptiongame.snaptionapp.CreateGameActivity"
    tools:showIn="@layout/activity_main_snaption">

    <ImageView android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorBlack"/>

    <Button android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <Button android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_public"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_private"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</LinearLayout>