<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="24dp">

    <TextView
        android:id="@+id/login_header"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/login_dialog_header" />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:gravity="center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/google_login"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/mock_facebook_login_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/com_facebook_blue"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/com_facebook_button_login_logo"
        android:gravity="center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/facebook_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>