<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/captions"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>
    </android.support.design.widget.AppBarLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:layout_width="match_parent"
                android:maxHeight="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/image_view" />

            <RelativeLayout
                android:id="@+id/picker_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="5dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/picker_photo_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="2dp"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="15dp">

                    <ImageView
                        android:id="@+id/picker_photo"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>
                </android.support.v7.widget.CardView>


                <TextView
                    android:id="@+id/picker_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@id/picker_photo_view"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/flag_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/date_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/picker_container"
                android:background="@color/colorPrimary"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/end_date"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:id="@+id/end_date"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@id/end_date"
                    android:gravity="center_vertical"
                    android:id="@+id/text_date"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:src="@drawable/comments"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:id="@+id/captions_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:id="@+id/number_captions"
                    android:layout_toStartOf="@id/captions_icon"
                    android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/invite_friends"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:layout_toStartOf="@id/number_captions"
            android:layout_marginStart="15dp"
            android:paddingStart="10dp"
            android:layout_marginEnd="15dp"
            android:paddingEnd="10dp"
            android:visibility="gone"
            android:text="@string/game_invite"/>

                <Button
                    android:id="@+id/join_game_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_toStartOf="@id/number_captions"
                    android:background="?attr/selectableItemBackground"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/join_game"
                    android:textColor="@color/colorAccent" />

    </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_caption_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/date_container">

            </android.support.v7.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/intent_load_progress"
                android:layout_width="wrap_content"
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/caption_items"
        android:background="#80000000">

        <include layout="@layout/card_input_layout"
            android:id="@+id/card_input"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/possible_caption_cards_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_white_24dp" />
</android.support.design.widget.CoordinatorLayout>
